<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AttendanceActivity">

    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Select Date"
        android:textAlignment="center"
        android:background="@drawable/red_bg"
        android:textColor="#fff"
        android:textStyle="bold"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Show Date" />

    <Button
        android:id="@+id/attendanceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/red_bg"
        android:padding="5dp"
        android:text="Check Attendance"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateButton" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/mylightblue"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attendanceButton"
        app:layout_constraintVertical_bias="0.417">

        <TableRow
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:background="@drawable/table_heading"
            android:padding="8dp">

            <TextView

                android:gravity="center"
                android:padding="5dp"
                android:text="@string/day"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView

                android:gravity="center"
                android:padding="5dp"
                android:text="@string/present"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView

                android:gravity="left"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:text="@string/absent"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#fff">

            <TextView

                android:gravity="left"
                android:padding="10dp"
                android:text="@string/monday"
                android:textColor="#424242"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_gravity="center"
                android:buttonTint="@color/mydarkblue"
                android:checked="true" />

            <RadioButton
                android:layout_gravity="center"
                android:buttonTint="@color/mydarkblue"
                android:checked="false" />


        </TableRow>

        <TableRow
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/mylightblue">

            <TextView

                android:gravity="left"
                android:padding="10dp"
                android:text="@string/tuesday"
                android:textColor="#424242"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_gravity="center"
                android:buttonTint="@color/mydarkblue"
                android:checked="false" />

            <RadioButton
                android:layout_gravity="center"
                android:buttonTint="@color/mydarkblue"
                android:checked="true" />


        </TableRow>

        <TableRow
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#fff">

            <TextView

                android:gravity="left"
                android:padding="10dp"
                android:text="@string/wednesday"
                android:textColor="#424242"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_gravity="center"
                android:buttonTint="@color/mydarkblue"
                android:checked="true" />

            <RadioButton
                android:layout_gravity="center"
                android:buttonTint="@color/mydarkblue"
                android:checked="false" />


        </TableRow>

        <TableRow
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/mylightblue">

            <TextView

                android:gravity="left"
                android:padding="10dp"
                android:text="@string/thursday"
                android:textColor="#424242"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_gravity="center"
                android:buttonTint="@color/mydarkblue"
                android:checked="true" />

            <RadioButton
                android:layout_gravity="center"
                android:buttonTint="@color/mydarkblue"
                android:checked="false" />


        </TableRow>

        <TableRow
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#fff">

            <TextView

                android:gravity="left"
                android:padding="10dp"
                android:text="@string/friday"
                android:textColor="#424242"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_gravity="center"
                android:buttonTint="@color/mydarkblue"
                android:checked="true" />

            <RadioButton
                android:layout_gravity="center"
                android:buttonTint="@color/mydarkblue"
                android:checked="false" />


        </TableRow>


    </TableLayout>
</android.support.constraint.ConstraintLayout>