<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mylightblue"
    tools:context=".ui.MainPage">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="4"
        android:layout_marginTop="15dp"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:padding="14dp">

        <android.support.v7.widget.CardView
            android:id="@+id/attendance"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/mydarkblue"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"

                    android:orientation="vertical"

                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_attendance"
                        android:layout_gravity="center"
                        android:paddingTop="40dp"/>
                    <TextView
                        android:text="@string/attendance"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="center"
                        />

                </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/exams"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/mydarkblue"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"

                android:orientation="vertical"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_exams"
                    android:layout_gravity="center"
                    android:paddingTop="40dp"/>
                <TextView
                    android:text="@string/exams"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/fees"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/mydarkblue"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"

                android:orientation="vertical"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_fee"
                    android:layout_gravity="center"
                    android:paddingTop="40dp"/>
                <TextView
                    android:text="@string/fees"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/news"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/mydarkblue"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"

                android:orientation="vertical"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_notice"
                    android:layout_gravity="center"
                    android:paddingTop="40dp"/>
                <TextView
                    android:text="@string/news_letter"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/discipline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/mydarkblue"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"

                android:orientation="vertical"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_discipline"
                    android:layout_gravity="center"
                    android:paddingTop="40dp"/>
                <TextView
                    android:text="@string/discipline"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/health"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/mydarkblue"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"

                android:orientation="vertical"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_health"
                    android:layout_gravity="center"
                    android:paddingTop="40dp"/>
                <TextView
                    android:text="@string/health"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/bus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/mydarkblue"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"

                android:orientation="vertical"

                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_bus"
                    android:layout_gravity="center"
                    android:paddingTop="40dp"/>
                <TextView
                    android:text="@string/track_bus"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </GridLayout>

</LinearLayout>