<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ficards"
        android:layout_width="155dp"
        android:layout_height="138dp"

        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:adjustViewBounds="true"
        android:background="@drawable/logobackground"

        android:cropToPadding="false"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ficards" />


    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_linear_layout"
        android:elevation="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/btnlogin"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/ficards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ficards"
        app:layout_constraintVertical_bias="0.375">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginUserName"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginStart="44dp"

            android:layout_marginLeft="44dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:textColorHint="#fff">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/loginInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_profile"
                android:drawableLeft="@drawable/ic_profile"
                android:drawablePadding="24dp"
                android:hint="@string/username"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginUserName"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:layout_marginBottom="164dp"
            android:textColorHint="#fff"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/myred">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/password"
                android:layout_alignLeft="@+id/password"
                android:drawableStart="@drawable/ic_password"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="24dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/rememberCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="-140dp"
            android:buttonTint="#fff"
            android:text="Remember me"
            android:textColor="#fff"
            android:textSize="18sp"

            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/resetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignBottom="@+id/rememberCheckBox"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginBottom="-50dp"
            android:text="@string/forgot_password"
            android:textColor="#fff"
            android:textSize="18sp" />


    </RelativeLayout>


    <Button
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="sans-serif"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:text="Login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="26sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative" />




</android.support.constraint.ConstraintLayout>